[package]
name = "rig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream", "serde", "bracketed-paste", "futures-core"] }
nvim-rs = "0.5.0"
once_cell = "1.17.1"
regex = "1.7.3"
thiserror = "1.0.40"
