[package]
name = "rig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream", "serde", "bracketed-paste", "futures-core"] }
git2 = "0.17.1"
nix = "0.26.2"
nvim-rs = "0.5.0"
once_cell = "1.17.1"
regex = "1.7.3"
thiserror = "1.0.40"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

